# multiRL-drone-coverage

./: decentralized_execute.py  decentralized_execution.py  decentralized_execution_SOVA.py  field_coverage_env.py  foi-2.csv  foi_5_agent.csv  main.py  main_potential.py  main_potential_DQN.py  main_potential_FSR.py  plots.ipynb  potential_game_env.py  pyproject.toml  util.py
2_drones_MPG_DQN/: durations.pkl  episode_rewards.pkl  trained_dqn.pth
2_drones_MPG_DQN_Try/: episode_rewards.pkl
2_drones_MPG_DQN_foi0_seed0/: durations.pkl  trained_dqn.pth
2_drones_MPG_DQN_foi0_seed0_nonstop/: durations.pkl  episode_rewards.pkl  notes.txt  trained_dqn.pth
2_drones_MPG_DQN_sigmoid/: durations.pkl  episode_rewards.pkl  trained_dqn.pth
2_drones_baseline/: trained_theta_baseline.npy
2_drones_baseline_seed0/: trained_theta_baseline.npy
2_drones_baseline_seed0_nonstop/: trained_theta_baseline.npy
2_drones_baseline_seed1/: trained_theta_baseline.npy
3_drones_MPG_DQN_foi0/: durations.pkl  episode_rewards.pkl  trained_dqn.pth
3_drones_MPG_DQN_foi1/: durations.pkl  episode_rewards.pkl  trained_dqn.pth
3_drones_MPG_DQN_foi2/: durations.pkl  episode_rewards.pkl  trained_dqn.pth
3_drones_MPG_DQN_foi2_seed0_nonstop/: durations.pkl  episode_rewards.pkl  trained_dqn.pth
3_drones_baseline_foi2/: note.txt
3_drones_baseline_seed0/: trained_theta_baseline.npy
output_1/: episode_steps.pkl  trained_theta_baseline.npy
output_1_3Drones/: trained_theta_baseline.npy
output_2/: coverage.pkl  episode_rewards.pkl  theta_potential_game.npy  trained_theta_MPG.npy
(+4 files in other folders)
